--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
   </div>
   <div id="signup-root"></div>
   <!-- GSAP CDN -->
-  <script src="../libs/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <!-- Firebase SDKs (optional, for future use) -->
   <!--
   <script type="module">
@@ -395,4 +395,5 @@
   <!-- App Scripts -->
   <script type="module" src="./signup.js"></script>
 </body>
+
 </html>
